--- a/TransitoRD/appsettings.json
+++ b/TransitoRD/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=EQUIPO-DE-YONIB\\SQL_ITLA;Database=TransitoRD_DB;Trusted_Connection=true;MultipleActiveResultSets=true;Trust Server Certificate=true",
+    "IdentityConnection": "Server=EQUIPO-DE-YONIB\\SQL_ITLA;Database=TransitoRD_DB;Trusted_Connection=true;MultipleActiveResultSets=true;Trust Server Certificate=true"
+    //"DefaultConnection2": "Server=DESKTOP-BB9NQHL\\SQLEXPRESS;Database=SDQRealEstateDB;Trusted_Connection=true;MultipleActiveResultSets=true;Trust Server Certificate=true",
+    //"IdentityConnection2": "Server=DESKTOP-BB9NQHL\\SQLEXPRESS;Database=SDQRealEstateDB;Trusted_Connection=true;MultipleActiveResultSets=true;Trust Server Certificate=true"
+  },
   "AllowedHosts": "*"
 }
