--- a/TransitoRD.Infrastucture.Persistence/TransitoRD.Infrastucture.Persistence.csproj
+++ b/TransitoRD.Infrastucture.Persistence/TransitoRD.Infrastucture.Persistence.csproj
@@ -33,4 +33,8 @@
     <ProjectReference Include="..\TransitoRD.Core.Domain\TransitoRD.Core.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
